chore: .gitignore 업데이트 및 신규 작업 내역 중간 백업 (RAG 기능 보강 및 MCP 설정 포함)