@@ -32,23 +32,26 @@ public class OnnxEmbeddingConfig {
 
     @Bean
     public OrtSession ortSession(OrtEnvironment env) throws OrtException, IOException {
-        ClassPathResource modelResource = new ClassPathResource(modelPath);
-        byte[] modelBytes = modelResource.getInputStream().readAllBytes();
+        Path path = java.nio.file.Paths.get(modelPath);
+        if (!java.nio.file.Files.exists(path)) {
+            throw new IOException("ONNX 모델 파일을 찾을 수 없습니다: " + path.toAbsolutePath());
+        }
+        byte[] modelBytes = java.nio.file.Files.readAllBytes(path);
         OrtSession.SessionOptions opts = new OrtSession.SessionOptions();
         opts.setIntraOpNumThreads(Runtime.getRuntime().availableProcessors());
-        log.info("ONNX 모델 로드 준비: {}", modelPath);
+        log.info("외부 파일 시스템에서 ONNX 모델 로드: {}", path.toAbsolutePath());
         return env.createSession(modelBytes, opts);
     }
 
     @Bean
     public HuggingFaceTokenizer huggingFaceTokenizer() throws IOException {
-        ClassPathResource tokenizerResource = new ClassPathResource(tokenizerPath);
-        Path tempDir = java.nio.file.Files.createTempDirectory("hf-tokenizer");
-        Path tempFile = tempDir.resolve("tokenizer.json");
-        java.nio.file.Files.copy(tokenizerResource.getInputStream(), tempFile,
-                java.nio.file.StandardCopyOption.REPLACE_EXISTING);
-        HuggingFaceTokenizer tokenizer = HuggingFaceTokenizer.newInstance(tempFile);
-        log.info("HuggingFace 토크나이저 로드 완료: {}", tokenizerPath);
+        Path path = java.nio.file.Paths.get(tokenizerPath);
+        if (!java.nio.file.Files.exists(path)) {
+            throw new IOException("토크나이저 파일을 찾을 수 없습니다: " + path.toAbsolutePath());
+        }
+        // DJL HuggingFaceTokenizer는 파일 경로를 직접 받음
+        HuggingFaceTokenizer tokenizer = HuggingFaceTokenizer.newInstance(path);
+        log.info("외부 파일 시스템에서 HuggingFace 토크나이저 로드: {}", path.toAbsolutePath());
         return tokenizer;
     }
 }
